Fixed Sonar issues to increase reliability and maintainability